<resources>
    <string name="app_name">FinalHomework</string>
    <string name="string_confirmation">提示信息</string>
    <string name="string_sure_to_delete">是否确定删除</string>
    <string name="string_no">否</string>
    <string name="string_yes">是</string>
    <string name="str_confirm">确定</string>
    <string name="str_cancel">取消</string>
    <string name="str_back">返回</string>
    <string name="str_bookshelf">书架</string>
    <string name="str_unfold">展开</string>
    <string name="str_search">搜索</string>
    <string name="str_more">更多</string>
    <string name="str_details">详细信息</string>
    <string name="str_label">标签</string>
    <string name="str_readingstate">阅读状态</string>
    <string name="str_title">标题:</string>
    <string name="str_author">作者:</string>
    <string name="str_publisher">出版社:</string>
    <string name="str_pubdate">出版时间:</string>
    <string name="str_books">列表</string>
    <string name="str_createlabel">添加标签</string>
</resources>