<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/toolbar_all"
        android:icon="@drawable/icon_all"
        android:title="@string/str_bookshelf"
        app:showAsAction="always"/>

    <item
        android:id="@+id/toolbar_unfold"
        android:icon="@drawable/icon_unfolder"
        android:title="@string/str_unfold"
        app:showAsAction="always"/>

    <item
        android:id="@+id/toolbar_search"
        android:title="@string/str_search"
        android:icon="@drawable/icon_search"
        app:actionViewClass="android.widget.SearchView"

        app:showAsAction="always"/>

    <item
        android:id="@+id/toolbar_more"
        android:icon="@drawable/icon_topright"
        android:title="@string/str_more"
        app:showAsAction="never"/>
</menu>