<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="top">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="200dp">
        <ImageView
            android:layout_width="100dp"
            android:layout_height="200dp">
        </ImageView>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="300dp"
            android:layout_height="200dp">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="300dp"
                android:layout_height="50dp">
                <TextView
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:text="@string/str_title">
                </TextView>
                <EditText
                    android:id="@+id/edit_title"
                    android:layout_width="200dp"
                    android:layout_height="50dp">
                </EditText>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="300dp"
                android:layout_height="50dp">
                <TextView
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:text="@string/str_author">
                </TextView>
                <EditText
                    android:id="@+id/edit_author"
                    android:layout_width="200dp"
                    android:layout_height="50dp">
                </EditText>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="300dp"
                android:layout_height="50dp">
                <TextView
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:text="@string/str_publisher">
                </TextView>
                <EditText
                    android:id="@+id/edit_publisher"
                    android:layout_width="200dp"
                    android:layout_height="50dp">
                </EditText>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="300dp"
                android:layout_height="50dp">
                <TextView
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:text="@string/str_pubdate">
                </TextView>
                <EditText
                    android:id="@+id/edit_pubdate"
                    android:layout_width="200dp"
                    android:layout_height="50dp">
                </EditText>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/str_details">
        </TextView>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <TextView
                android:text="@string/str_label"
                android:layout_width="200dp"
                android:layout_height="50dp">
            </TextView>
            <EditText
                android:id="@+id/edit_label"
                android:layout_width="200dp"
                android:layout_height="50dp">
            </EditText>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <TextView
                android:text="@string/str_readingstate"
                android:layout_width="200dp"
                android:layout_height="50dp">
            </TextView>
            <EditText
                android:id="@+id/edit_state"
                android:layout_width="200dp"
                android:layout_height="50dp">
            </EditText>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="end">
        <Button
            android:id="@+id/edit_determine"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:text="@string/str_confirm">
        </Button>
        <Button
            android:id="@+id/edit_cancel"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:text="@string/str_cancel">
        </Button>
    </LinearLayout>
</LinearLayout>