<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/mainbackground">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_main"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/blue"
        app:contentInsetStartWithNavigation="0dp"
        app:subtitleTextColor="#FFF"
        app:titleTextColor="#FFF"
        tools:ignore="MissingConstraints">
        <Spinner
            android:id="@+id/spinner_state"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_gravity="end">
        </Spinner>
    </androidx.appcompat.widget.Toolbar>

    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/drawer_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:openDrawer="start">
        <!--主内容区-->
        <LinearLayout
            android:id="@+id/content_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerview_main"
                android:layout_width="match_parent"
                android:layout_height="600dp">
            </androidx.recyclerview.widget.RecyclerView>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|bottom"
                android:src="@drawable/icon_add"/>
        </LinearLayout>

        <!--左侧抽屉菜单-->
        <com.google.android.material.navigation.NavigationView
            android:id="@+id/nav_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:background="@drawable/drawer_background">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <ImageView
                    android:layout_gravity="top|start"
                    android:src="@drawable/bookshelf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                </ImageView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="10dp"
                        android:orientation="vertical">
                        <LinearLayout
                            android:id="@+id/drawer_books"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:orientation="horizontal">
                            <ImageView
                                android:src="@drawable/icon_list"
                                android:layout_width="100dp"
                                android:layout_height="50dp">
                            </ImageView>
                            <TextView
                                android:text="@string/str_books"
                                android:layout_width="100dp"
                                android:layout_height="50dp">
                            </TextView>
                        </LinearLayout>

                        <android.widget.SearchView
                            android:id="@+id/drawer_search"
                            android:layout_width="match_parent"
                            android:layout_height="50dp">
                        </android.widget.SearchView>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="100dp"
                            android:orientation="vertical">
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">
                                <ImageView
                                    android:src="@drawable/icon_label"
                                    android:layout_width="100dp"
                                    android:layout_height="50dp">
                                </ImageView>
                                <LinearLayout
                                    android:orientation="vertical"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content">
                                    <TextView
                                        android:text="@string/str_label"
                                        android:textSize="30sp"
                                        android:layout_width="200dp"
                                        android:layout_height="50dp">
                                    </TextView>
                                    <LinearLayout
                                        android:layout_width="200dp"
                                        android:layout_height="50dp"
                                        android:orientation="horizontal">

                                        <ImageView
                                            android:layout_width="50dp"
                                            android:layout_height="25dp"
                                            android:src="@drawable/icon_addlabel">
                                        </ImageView>
                                        <TextView
                                            android:text="@string/str_createlabel"
                                            android:textSize="15sp"
                                            android:layout_width="100dp"
                                            android:layout_height="25dp">
                                        </TextView>
                                    </LinearLayout>

                                </LinearLayout>
                            </LinearLayout>
                        </LinearLayout>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:orientation="vertical">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:orientation="horizontal">
                            <ImageView
                                android:src="@drawable/icon_settings"
                                android:layout_width="100dp"
                                android:layout_height="50dp">
                            </ImageView>
                            <TextView
                                android:text="Settings"
                                android:layout_width="100dp"
                                android:layout_height="50dp">
                            </TextView>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:orientation="horizontal">
                            <ImageView
                                android:src="@drawable/icon_about"
                                android:layout_width="100dp"
                                android:layout_height="50dp">
                            </ImageView>
                            <TextView
                                android:text="About"
                                android:layout_width="100dp"
                                android:layout_height="50dp">
                            </TextView>
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>
        </com.google.android.material.navigation.NavigationView>

    </androidx.drawerlayout.widget.DrawerLayout>

</LinearLayout>